fix canvas size for renderer and change z-index of navbar

--- a/less/styles.less
+++ b/less/styles.less
@@ -33,6 +33,7 @@ header.nav{
   left:0;
   right:0;
   height:5vh;
+  z-index: 1;
 }
 div.box{
   position:absolute;
